// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`accommodationSummary accommodation history accommodationHistoryRows returns a row for each accommodation 1`] = `
[
  [
    {
      "text": "",
    },
    {
      "text": "",
    },
    {
      "html": "<strong>Approved Premises</strong><br />London<br />SW1A 1AA",
    },
    {
      "html": "<strong class="govuk-tag govuk-tag--green">Main</strong>",
    },
  ],
  [
    {
      "text": "3 January 2025",
    },
    {
      "text": "27 April 2026",
    },
    {
      "html": "<strong>Friends/Family (transient)</strong><br />Not Quite London<br />SW1A 2EE",
    },
    {
      "html": "",
    },
  ],
]
`;

exports[`accommodationSummary accommodation history accommodationHistoryTable macro renders a message and no table when there are no addresses 1`] = `
"<div class="govuk-summary-card">
    <div class="govuk-summary-card__title-wrapper">
      <h2 class="govuk-summary-card__title">Accommodation history</h2>
    </div>
    <div class="govuk-summary-card__content">
      
        
          <p class="govuk-body">No previous accommodation</p>
        
      
    </div>
  </div>"
`;

exports[`accommodationSummary accommodation history accommodationHistoryTable macro renders a message when there is an API error 1`] = `
"<div class="govuk-summary-card">
    <div class="govuk-summary-card__title-wrapper">
      <h2 class="govuk-summary-card__title">Accommodation history</h2>
    </div>
    <div class="govuk-summary-card__content">
      
        <p class="moj-inset-api-error">This information is currently unavailable. Try again later.</p>
      
    </div>
  </div>"
`;

exports[`accommodationSummary accommodation history accommodationHistoryTable macro renders the accommodation history table for a given list of accommodations 1`] = `
"<div class="govuk-summary-card">
    <div class="govuk-summary-card__title-wrapper">
      <h2 class="govuk-summary-card__title">Accommodation history</h2>
    </div>
    <div class="govuk-summary-card__content">
      
        
          <div class="govuk-summary-list">
            <table class="govuk-table">


  <thead class="govuk-table__head">
    <tr class="govuk-table__row">
    
      <th scope="col" class="govuk-table__header">Start date</th>
    
      <th scope="col" class="govuk-table__header">End date</th>
    
      <th scope="col" class="govuk-table__header">Address</th>
    
      <th scope="col" class="govuk-table__header">Status</th>
    
    </tr>
  </thead>

  <tbody class="govuk-table__body">

  
    <tr class="govuk-table__row">
    
      
      
      <td class="govuk-table__cell"></td>
      
    
      
      
      <td class="govuk-table__cell"></td>
      
    
      
      
      <td class="govuk-table__cell"><strong>Approved Premises</strong><br />London<br />SW1A 1AA</td>
      
    
      
      
      <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">Main</strong></td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <td class="govuk-table__cell">3 January 2025</td>
      
    
      
      
      <td class="govuk-table__cell">27 April 2026</td>
      
    
      
      
      <td class="govuk-table__cell"><strong>Friends/Family (transient)</strong><br />Not Quite London<br />SW1A 2EE</td>
      
    
      
      
      <td class="govuk-table__cell"></td>
      
    
    </tr>
  

  </tbody>
</table>

          </div>
        
      
    </div>
  </div>"
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for current accommodation returns a context card object for a CAS2 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-02-03",
  "link": null,
  "name": "CAS2 accommodation of 13 weeks or more",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2025-12-01",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for current accommodation returns a context card object for a CAS3 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-07-31",
  "link": null,
  "name": "CAS3",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2025-12-01",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for current accommodation returns a context card object for a No type accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-05-23",
  "link": null,
  "name": undefined,
  "settledTag": undefined,
  "startDate": "2025-12-01",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Null accommodation 1`] = `undefined`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Private address accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-09-10",
  "link": null,
  "name": "Living in the home of a friend, family member or partner: settled",
  "settledTag": {
    "colour": "green",
    "text": "Settled",
  },
  "startDate": "2025-12-01",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Private and in SAS accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "current",
  "endDate": "2026-09-10",
  "link": null,
  "name": "Living in the home of a friend, family member or partner: settled",
  "settledTag": {
    "colour": "green",
    "text": "Settled",
  },
  "startDate": "2025-12-01",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Undefined accommodation 1`] = `undefined`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for next accommodation returns a context card object for a CAS2 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "link": null,
  "name": "CAS2 accommodation of 13 weeks or more",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2026-02-03",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for next accommodation returns a context card object for a CAS3 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "link": null,
  "name": "CAS3",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2026-07-31",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for next accommodation returns a context card object for a No type accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "link": null,
  "name": undefined,
  "settledTag": undefined,
  "startDate": "2026-05-23",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Null accommodation 1`] = `undefined`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Private address accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "link": null,
  "name": "Living in the home of a friend, family member or partner: settled",
  "settledTag": {
    "colour": "green",
    "text": "Settled",
  },
  "startDate": "2026-09-10",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Private and in SAS accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "cardType": "next",
  "endDate": undefined,
  "link": "/cases/L489936/proposed-addresses/df4b775f-29fa-413e-b39b-1df368288df7/details",
  "name": "Living in the home of a friend, family member or partner: settled",
  "settledTag": {
    "colour": "green",
    "text": "Settled",
  },
  "startDate": "2026-09-10",
}
`;

exports[`accommodationSummary accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Undefined accommodation 1`] = `undefined`;

exports[`accommodationSummary accommodationSummaryAddress renders the HTML for an accommodation summary 1`] = `"<strong>Householder (Owner - freehold or leasehold)</strong><br />London<br />SW1A 1AA"`;

exports[`accommodationSummary accommodationSummaryAddress renders without the accommodation type 1`] = `"London<br />SW1A 1AA"`;

exports[`accommodationSummary noFixedAbodeAlert returns no fixed abode alert for NO_FIXED_ABODE status 1`] = `
{
  "date": null,
  "status": "NO_FIXED_ABODE",
}
`;

exports[`accommodationSummary noFixedAbodeAlert returns risk of no fixed abode alert for RISK_OF_NO_FIXED_ABODE status 1`] = `
{
  "date": "2026-06-01",
  "status": "RISK_OF_NO_FIXED_ABODE",
}
`;

exports[`accommodationSummary noFixedAbodeAlert returns undefined if the case status is not NO_FIXED_ABODE or RISK_OF_NO_FIXED_ABODE 1`] = `undefined`;
